--- a/Flight_Controller/Software/Mark_I.ioc
+++ b/Flight_Controller/Software/Mark_I.ioc
@@ -3,7 +3,9 @@ Dma.Request0=UART4_RX
 Dma.Request1=UART4_TX
 Dma.Request2=SPI3_RX
 Dma.Request3=SPI3_TX
-Dma.RequestsNb=4
+Dma.Request4=USART1_RX
+Dma.Request5=USART1_TX
+Dma.RequestsNb=6
 Dma.SPI3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
 Dma.SPI3_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.SPI3_RX.2.Instance=DMA1_Stream0
@@ -44,6 +46,26 @@ Dma.UART4_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART4_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.UART4_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.UART4_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.4.Instance=DMA2_Stream2
+Dma.USART1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.4.Mode=DMA_CIRCULAR
+Dma.USART1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.5.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.5.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.5.Instance=DMA2_Stream7
+Dma.USART1_TX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.5.Mode=DMA_NORMAL
+Dma.USART1_TX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
@@ -53,11 +75,14 @@ Mcu.IP2=RCC
 Mcu.IP3=SPI3
 Mcu.IP4=SYS
 Mcu.IP5=UART4
-Mcu.IPNb=6
+Mcu.IP6=USART1
+Mcu.IPNb=7
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
+Mcu.Pin10=PB7
+Mcu.Pin11=VP_SYS_VS_Systick
 Mcu.Pin2=PA13
 Mcu.Pin3=PA14
 Mcu.Pin4=PA15
@@ -65,8 +90,8 @@ Mcu.Pin5=PC10
 Mcu.Pin6=PC11
 Mcu.Pin7=PC12
 Mcu.Pin8=PB3
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin9=PB6
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -77,6 +102,8 @@ NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -88,6 +115,7 @@ NVIC.SPI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
 NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Mode=Asynchronous
 PA0-WKUP.Signal=UART4_TX
@@ -103,6 +131,12 @@ PA15.Locked=true
 PA15.Signal=GPIO_Output
 PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
+PB6.Locked=true
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Locked=true
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
 PC10.Mode=Full_Duplex_Master
 PC10.Signal=SPI3_SCK
 PC11.Mode=Full_Duplex_Master
@@ -137,7 +171,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_SPI3_Init-SPI3-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -179,6 +213,9 @@ SPI3.VirtualType=VM_MASTER
 UART4.BaudRate=230400
 UART4.IPParameters=VirtualMode,BaudRate
 UART4.VirtualMode=Asynchronous
+USART1.BaudRate=230400
+USART1.IPParameters=VirtualMode,BaudRate
+USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
