Spi does not work : no answers from the mpu

--- a/Flight_Controller/Software/Mark_I.ioc
+++ b/Flight_Controller/Software/Mark_I.ioc
@@ -199,9 +199,10 @@ SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI3.CLKPolarity=SPI_POLARITY_LOW
 SPI3.CalculateBaudRate=328.125 KBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
@@ -209,9 +210,11 @@ TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,AutoReloadPreload,Prescaler
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2,Pulse-PWM Generation3 CH3,Pulse-PWM Generation4 CH4,AutoReloadPreload,Prescaler,OCMode_PWM-PWM Generation2 CH2,OCMode_PWM-PWM Generation3 CH3
+TIM3.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM1
+TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM1
 TIM3.Period=3999
-TIM3.Prescaler=159
+TIM3.Prescaler=83
 TIM3.Pulse-PWM\ Generation1\ CH1=999
 TIM3.Pulse-PWM\ Generation2\ CH2=999
 TIM3.Pulse-PWM\ Generation3\ CH3=999
