--- a/Flight_Controller/Software/Mark_I.ioc
+++ b/Flight_Controller/Software/Mark_I.ioc
@@ -233,7 +233,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_UART4_Init-UART4-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_USART3_UART_Init-USART3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -278,7 +278,7 @@ SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
 SH.S_TIM3_CH4.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
 TIM2.Period=999
-TIM2.Prescaler=167
+TIM2.Prescaler=83
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -288,7 +288,7 @@ TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channe
 TIM3.OCMode_PWM-PWM\ Generation2\ CH2=TIM_OCMODE_PWM1
 TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM1
 TIM3.Period=3999
-TIM3.Prescaler=80
+TIM3.Prescaler=10
 TIM3.Pulse-PWM\ Generation1\ CH1=999
 TIM3.Pulse-PWM\ Generation2\ CH2=999
 TIM3.Pulse-PWM\ Generation3\ CH3=999
