--- a/Flight_Controller/Software/Mark_I.ioc
+++ b/Flight_Controller/Software/Mark_I.ioc
@@ -96,15 +96,16 @@ Mcu.CPN=STM32F405RGT6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA
 Mcu.IP1=I2C1
+Mcu.IP10=USART3
 Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM2
 Mcu.IP6=TIM3
-Mcu.IP7=UART4
-Mcu.IP8=USART1
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP7=TIM5
+Mcu.IP8=UART4
+Mcu.IP9=USART1
+Mcu.IPNb=11
 Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -123,6 +124,7 @@ Mcu.Pin2=PH0-OSC_IN
 Mcu.Pin20=VP_SYS_VS_Systick
 Mcu.Pin21=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin3=PH1-OSC_OUT
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
@@ -130,7 +132,7 @@ Mcu.Pin6=PA6
 Mcu.Pin7=PA7
 Mcu.Pin8=PB0
 Mcu.Pin9=PB1
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -307,5 +309,7 @@ VP_TIM2_VS_ClockSourceINT.Mode=Internal
 VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 board=custom
 isbadioc=false
